# photo-event

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: deps.py
app/api/routes/: auth.py  users.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: event.py  participant.py  photo.py  user.py
app/repository/: event_repository.py  user_repository.py
app/schemas/: user.py
app/security/: security.py
app/service/: auth_service.py  event_service.py  qr_service.py  user_service.py
migrations/versions/: 17d03cfe1c62_create_user_table.py  2b55624b8ad6_add_gender_to_user_table.py  45422a980a9a_add_has_advertisement_perm.py
